# psaltica-ocr

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  start_label_studio.sh
.beads/: metadata.json
config/: classes.yaml  label_studio.xml  mask_audit_pages.csv  shape_family_aliases.yaml  symbol_map.json
psaltica_ocr/: __init__.py  cluster_assembly.py  font_shape_matching.py  layout_segmentation.py  ocr_validator.py  reading_order.py  rendering.py  symbol_map.py  template_matching.py
tests/: test_annotation_workflow.py  test_font_shape_matching.py  test_layout_segmentation.py  test_mask_audit.py  test_ocr_validator.py  test_package.py  test_reading_order.py  test_rendering.py  test_symbol_map.py  test_symbol_stats.py
tools/: _extract_symbol_map.ts  audit_mask_precision.py  autolabel_pages.py  count_neume_frequencies.py  export_annotation_tasks.py  export_label_studio_config.py  group_neume_shapes.py  import_labels.py  infer_page.py  match_font_shape_groups.py  propose_modifier_family_aliases.py  render_pdfs.py  render_reference_sheet.py  segment_layout.py  symbol_stats.py  sync_symbol_map.py  validate_gold_compositions.py
